Agent Atlas/forceapp/main/default/objects/Form_Submission__c/Form_Submission__c.object-meta.xml
<CustomObject>
    <label>Form Submission</label>
    <nameField>
        <label>Form Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>