Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Academic_Application__c.field-meta.xml
<CustomField>
    <fullName>Academic_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Academic application record created for this submitted form.</description>
    <label>Academic Application</label>
    <referenceTo>Academic_Application__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>