Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>