Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Last_Saved__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved__c</fullName>
    <label>Last Saved</label>
    <type>DateTime</type>
</CustomField>