Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>FS-{0000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>