Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>