Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>