Agent Atlas/forceapp/main/default/objects/Form_Submission__c/fields/Total_Pages__c.field-meta.xml
<CustomField>
    <fullName>Total_Pages__c</fullName>
    <label>Total Pages</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>