Agent Atlas/forceapp/main/default/objects/Form_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Current_Page__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Started_Date__c</columns>
    <columns>Total_Pages__c</columns>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>